# libderp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/libderp/: BufferDataStream.hpp  BufferRetroDataStream.hpp  FileDataStream.hpp  FileRetroDataStream.hpp  IBinarySerializable.hpp  IDataStream.hpp  IRetroDataStream.hpp  ViewDataStream.hpp  derpexcept.hpp  endian.hpp  libderp.hpp
include/libderp/prime1/: MREA.hpp
src/: libderp.cpp  test.cpp
src/IDataStream/: BufferDataStream.cpp  FileDataStream.cpp  IDataStream.cpp  IDataStreamRead.cpp  IDataStreamWrite.cpp  ViewDataStream.cpp
src/IRetroDataStream/: BufferDataStream.cpp  BufferRetroDataStream.cpp  FileDataStream.cpp  FileRetroDataStream.cpp  IDataStream.cpp  IRetroDataStream.cpp  ViewDataStream.cpp
src/prime1/: MREA.cpp
